add multi-master(e.g. postgres-x2) support

--- a/etc/pgbouncer.ini
+++ b/etc/pgbouncer.ini
@@ -1,10 +1,15 @@
 ;; database name = connect string
 ;;
 ;; connect string params:
-;;   dbname= host= port= user= password=
+;;   dbname= host= port= weight= user= password=
 ;;   client_encoding= datestyle= timezone=
 ;;   pool_size= connect_query=
 [databases]
+
+; multi master PostgreSQL server (e.g. postgresql-x2)
+; foodb = host=server1-ip weight=2
+; foodb = host=server2-ip weight=2
+; foodb = host=server3-ip weight=1
 
 ; foodb over unix socket
 ;foodb =
