add multi-master(e.g. postgres-x2) support

--- a/etc/pgbouncer.ini
+++ b/etc/pgbouncer.ini
@@ -4,6 +4,11 @@
 ;;   dbname= host= port= weight= user= password=
 ;;   client_encoding= datestyle= timezone=
 ;;   pool_size= connect_query=
+
+;; weight load balance:
+;;	no-weight:	least connection
+;;	weight > 0: least connection with weight ratio
+;;	weight = 0: random connecion 
 [databases]
 
 ; multi master PostgreSQL server (e.g. postgresql-x2)
